# 2022NSCL_MANDO

./: README.md
Arduino/: with_brake.ino
darknet_ros/darknet/: video_yolov4.sh
darknet_ros/darknet/cfg/yolov4/: traffic_light_tiny.cfg
darknet_ros/darknet_ros/config/: mando_v4_ver2.yaml  mando_v4_ver3.yaml  traffic_tiny.yaml  traffic_v4.yaml
darknet_ros/darknet_ros/launch/: mando_2.launch  mando_3.launch  traffic_tiny.launch  traffic_v4.launch
darknet_ros/darknet_ros/src/: sign.py  test.py  yolo_client.py
darknet_ros/darknet_ros/yolo_network_config/cfg/: mando_v4_ver2.cfg  mando_v4_ver3.cfg  traffic_light_v4.cfg
frenet_frame-and-stanley-in-rviz/src/custom_msgs/object_msgs/: CMakeLists.txt
frenet_frame-and-stanley-in-rviz/src/cv_agents/launch/: frenet.launch  only_map.launch  parking.launch  simulation.launch
frenet_frame-and-stanley-in-rviz/src/update/: CMakeLists.txt  package.xml
frenet_frame-and-stanley-in-rviz/src/update/devel/: .catkin  (+2 more)
handsfree_ros_imu/launch/: rviz_and_imu_a9.launch
handsfree_ros_imu/scripts/: get_imu_rpy.py  imu0.py  imu1.py
henes_car_control/: CMakeLists.txt  package.xml
henes_car_control/src/: henes_car_control_node.cpp  manual_parking.cpp  origin.cpp
launch/launch/: mando.launch  sensor.launch
odometry/: package.xml
odometry/src/: 2022_odometry.py  odometry.py
rosserial/rosserial_arduino/nodes/: serial_node.py
rosserial/rosserial_python/nodes/: serial_node.py
teleop_twist_keyboard/: controller.joystick.amgp  teleop_twist_keyboard.py
ublox_f9p/ntrip_ros/launch/: ntrip_ros_gnss.launch  ntrip_ros_vrs.launch
ublox_f9p/ublox_gps/config/: zed-f9p.yaml
usb_cam/launch/: lanenet_cam.launch  usb_cam.launch
usb_cam/src/: camera.py
(+41 files in other folders)
